--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit>=1.43.2
 speechrecognition>=3.10.0
 pyttsx3>=2.90
-pywin32>=306
+pypiwin32
 python-dotenv>=1.0.1
 langchain>=0.1.20
 langchain-groq>=0.1.0
