--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-streamlit>=1.43.2
-speechrecognition>=3.10.0
-pyttsx3>=2.90
-pypiwin32
-python-dotenv>=1.0.1
-langchain>=0.1.20
-langchain-groq>=0.1.0
-langchain-huggingface>=0.0.8
-langchain-community>=0.0.34
-Pillow>=10.3.0
+streamlit
+speechrecognition
+pyttsx3
+pypiwin32 ; sys_platform == "win32"
+espeak ; sys_platform == "linux"
+python-dotenv
+langchain
+langchain-groq
+langchain-huggingface
+langchain-community
+Pillow
